[package]
name = "htb-toolkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"
pnet = "0.34.0"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1", features = ["full"] }
